[metadata]
name = std-nslog
version = attr: nslog.__version__
url = https://github.com/beeware/std-nslog
project_urls =
    Funding = https://beeware.org/contributing/membership/
    Tracker = https://github.com/beeware/std-nslog/issues
    Source = https://github.com/beeware/std-nslog
author = Russell Keith-Magee
author_email = russell@keith-magee.com
maintainer = Russell Keith-Magee
maintainer_email = russell@keith-magee.com
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: iOS
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities
license = New BSD
license_file = LICENSE
description = A shim that redirects stderr/stdout to the Apple System Log (NSLog)
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords =
    apple
    nslog
    system log
    macOS
    iOS
platforms = any

[options]
py_modules = nslog

[bdist_wheel]
universal=1
